Remove a couple of deprecation warnings after JDK 21 upgrade